force-app/main/default/objects/TopProduct__c/TopProduct__c.object-meta.xml
<CustomObject>
    <label>Top Product</label>
    <nameField>
        <label>Product Best Sell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>