force-app/main/default/objects/TopProduct__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Top Products</relationshipLabel>
    <relationshipName>Top_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>