force-app/main/default/objects/TopProduct__c/fields/TotalQuantitySold__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantitySold__c</fullName>
    <label>TotalQuantitySold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>